--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ Flask-Cors==3.0.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
-PyPDF2==1.26.0
+PyPDF2==2.4.0
 six==1.15.0
 Werkzeug==1.0.1
+gunicorn==20.1.0
+pytest==7.1.3
